#181342281, rts-adalabs integration

--- a/postgres/Makefile
+++ b/postgres/Makefile
@@ -50,6 +50,7 @@
 CAT := cat
 ECHO  := echo
 WHICH := which
+DESTDIR?=
 
 NAME=gnatcoll_postgres
 
@@ -109,7 +110,7 @@ GPRBUILD_OPTIONS=
 BUILDER=gprbuild -p -m $(GTARGET) $(RBD) -j$(PROCESSORS) $(GPR_VARS) \
 	$(GPRBUILD_OPTIONS)
 INSTALLER=gprinstall -p -f --target=$(TARGET) $(GPR_VARS) \
-	$(RBD) --sources-subdir=include/$(NAME) --prefix=$(prefix)$(integrated_install)
+	$(RBD) --sources-subdir=include/$(NAME) --prefix=$(DESTDIR)$(prefix)$(integrated_install)
 CLEANER=gprclean -q $(RBD) $(GPR_VARS)
 UNINSTALLER=$(INSTALLER) -p -f --install-name=$(NAME) --uninstall
 
@@ -118,35 +119,58 @@ UNINSTALLER=$(INSTALLER) -p -f --install-name=$(NAME) --uninstall
 #########
 
 build: $(LIBRARY_TYPES:%=build-%)
+	make build-rts-adalabs-static
 
 build-%:
-	$(BUILDER) -XLIBRARY_TYPE=$* -XXMLADA_BUILD=$* -XGPR_BUILD=$* \
-		$(GNATCOLL_GPR)
+	$(BUILDER) -XLIBRARY_TYPE=$* -XGNATCOLL_BUILD=$* -XXMLADA_BUILD=$* -XGPR_BUILD=$* \
+		$(GNATCOLL_GPR) -XRTS_TYPE=default
+
+build-rts-adalabs-%:
+	$(BUILDER) -XLIBRARY_TYPE=$* -XGNATCOLL_BUILD=$* -XXMLADA_BUILD=$* -XGPR_BUILD=$* \
+		$(GNATCOLL_GPR) -XRTS_TYPE=adalabs --RTS=adalabs
 
 ###########
 # Install #
 ###########
 
 uninstall:
-ifneq (,$(wildcard $(prefix)/share/gpr/manifests/$(NAME)))
+ifneq (,$(wildcard $(DESTDIR)$(prefix)/share/gpr/manifests/$(NAME)))
 	$(UNINSTALLER) $(GNATCOLL_GPR)
 endif
 
 install: uninstall $(LIBRARY_TYPES:%=install-%)
-
+	make install-rts-adalabs-static
+	mkdir -p $(DESTDIR)$(prefix)/bin
+	sed -i 's/with \"gpr\";/with \"gpr\";\nwith \"rts\";/' $(DESTDIR)$(prefix)/share/gpr/gnatcoll_postgres.gpr
+	sed -i 's/BUILD : BUILD_KIND := external(\"LIBRARY_TYPE\", \"static\");/BUILD : BUILD_KIND := external(\"GNATCOLL_DB_BUILD\", external(\"GNATCOLL_BUILD\", \"static\"));/' $(DESTDIR)$(prefix)/share/gpr/gnatcoll_postgres.gpr
+	sed -i 's/for Languages use (\"Ada\", \"C\");/for Languages use (\"Ada\", \"C\");\n   case RTS.RTS_Type is\n      when \"adalabs\" =>\n         BUILD := \"rts-adalabs\";\n      when others =>\n         null;\n   end case;/'    $(DESTDIR)$(prefix)/share/gpr/gnatcoll_postgres.gpr
+	
 install-%:
-	$(INSTALLER) -XLIBRARY_TYPE=$* -XXMLADA_BUILD=$* -XGPR_BUILD=$* \
-		--build-name=$* --build-var=LIBRARY_TYPE $(GNATCOLL_GPR)
+	$(INSTALLER) -XLIBRARY_TYPE=$* -XGNATCOLL_BUILD=$* -XXMLADA_BUILD=$* -XGPR_BUILD=$* \
+		--build-name=$* --build-var=LIBRARY_TYPE $(GNATCOLL_GPR) -XRTS_TYPE=default
+
+install-rts-adalabs-%:
+	$(INSTALLER) -XLIBRARY_TYPE=$* -XGNATCOLL_BUILD=$* -XXMLADA_BUILD=$* -XGPR_BUILD=$* \
+		--build-name=rts-adalabs \
+		--build-var=LIBRARY_TYPE \
+		$(GNATCOLL_GPR) -XRTS_TYPE=adalabs --RTS=adalabs
+
 
 ###########
 # Cleanup #
 ###########
 
 clean: $(LIBRARY_TYPES:%=clean-%)
+	make clean-rts-adalabs-static
 
 clean-%:
-	-$(CLEANER) -XLIBRARY_TYPE=$* -XXMLADA_BUILD=$* -XGPR_BUILD=$* \
+	-$(CLEANER) -XLIBRARY_TYPE=$* -XGNATCOLL_BUILD=$* -XXMLADA_BUILD=$* -XGPR_BUILD=$* \
 		$(GNATCOLL_GPR)
+
+clean-rts-adalabs-%:
+	-$(CLEANER) -XLIBRARY_TYPE=$* -XGNATCOLL_BUILD=$* -XXMLADA_BUILD=$* -XGPR_BUILD=$* \
+		$(GNATCOLL_GPR) -XRTS_TYPE=adalabs --RTS=adalabs
+
 
 #########
 # setup #
